add readme, rand col, navigation template

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -11,6 +11,13 @@
         }
         .nav {
             margin-bottom: 20px;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            font-variant: small-caps;
         }
         .nav a {
             text-decoration: none;
