--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -62,7 +62,7 @@
     </div>
 
     {% if form %}
-    <form action="/calculate/" method="get">
+    <form action="/calculate/" method="get" class="content">
         <label for="a">Enter a:</label>
         <input type="number" name="a" id="a" required>
 
